src/objects/Sales_Area__c.object
<CustomObject>
    <description>Store the sales are info related with one account, used to define the creation of visits, sales order and sharing info based on sales rep.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account related sales are.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Area</relationshipLabel>
        <relationshipName>Sales_Area</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>Sales are channel.</description>
        <label>Channel</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Sales area division</description>
        <label>Division</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Key__c</fullName>
        <description>Unique sales area identification it is a junctions of Account SAP Id + Sales Org + Channel + Division.</description>
        <externalId>true</externalId>
        <label>External Key</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_ORG__c</fullName>
        <description>Sales ORG identification.</description>
        <label>Sales ORG</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Sales area status</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Sales Area</relationshipLabel>
        <relationshipName>Sales_Area</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Area</label>
    <nameField>
        <label>Sales Area</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Area</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>